Se hicieron ajustes en el estilo

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,6 @@
+body {
+  font-family: 'Segoe UI';
+}
 .boton{
     padding: 15px 25px;
   font-size: 24px;
@@ -15,7 +18,7 @@
 
 }
 .boton:disabled{
-    background-color: #fff;
+    background-color: #cccccc;
     cursor: not-allowed;
 }
 .cantor{
@@ -43,6 +46,30 @@
   width: calc(100%/5); /* Para que las columnas tengan el mismo ancho*/
 }
 .tablaCantor th{
-  background-color: #0056b3;
+  background-color: #0f40c5;
   color: #fff;
+}
+.tablaCantor td.sacada{
+  background-color: #28a745;
+  color: #ffffff;
+}
+.tablaCantor td:not(.sacada) {
+  background-color: #c4c2c2;
+  color: #000;
+}
+.ultimaBalota{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #e9e9e9;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.numeroBalota {
+  color: #d9534f;
+  font-size: 1.8em;
 }
